# azure-ai-gateway-for-devs

./: .gitignore  .prettierignore  LICENSE  README.md  package-lock.json  package.json
assets/drawio/: architecture-01.drawio  architecture-02.drawio  architecture-03.drawio  architecture-04.drawio  architecture-05.drawio  architecture-06.drawio  architecture-final.drawio
docs/tutorial/: README.md
docs/tutorial/01/: README.md  foundries.md  foundry.md  logs.md  resources.md  rg.md
docs/tutorial/02/: README.md  apim.md  foundry.md  python.md
docs/tutorial/03/: README.md  apim.md  foundry.md  python.md
docs/tutorial/03/apim/: apim.md  foundry.md
docs/tutorial/04/: README.md  appi.md  load_balance.md  logs.md
docs/tutorial/04/apim/: load_balance.md
docs/tutorial/05/: README.md  python.md
docs/tutorial/05/apim/: mcp.md
docs/tutorial/06/: README.md  products.md
docs/tutorial/06/apim/: policy_fragment.md  products.md  (+1 more)
docs/tutorial/07/: README.md  python.md  rbac.md
docs/tutorial/08/: README.md  ai-gw.md
python/: .env.example  .gitignore  README.md  poe_tasks.toml  pyproject.toml  requirements.pipx.txt  ruff.toml
python/config/: logging.conf
python/src/my_agent/: __main__.py  constants.py
python/src/my_agent/ai/agents/: mcp.py
python/src/my_agent/ai/tools/mcp/: apim.py
python/src/my_agent/cli/chat_agent/: apim_mcp.py
python/src/my_agent/config/: configuration.py  logs.py  mixin.py
python/src/my_agent/config/os_environ/: apim_mcp.py  azure_openai.py  settings.py  typing.py
python/src/my_agent/dependency_injection/: container.py
(+7 files in other folders)
